# iha_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: vehicleinfo.py
launch/: sim_start.launch.py
models/mini_talon_vtail/: model.sdf
models/yunuseli_pist/: model.config  model.sdf
models/yunuseli_pist/materials/scripts/: yunuseli.material
scripts/: setup_ardupilot_frame.sh
worlds/: sim.sdf
